--- a/transformer_decoder_training/jupyter_notebooks/piano_tests/sequence_prediction_piano_v4.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_tests/sequence_prediction_piano_v4.ipynb
@@ -708,7 +708,7 @@
     "        data_pred = tf_generator(input_tokens)\n",
     "        \n",
     "        # Sample the next token from the distribution of probabilities\n",
-    "        dist = Categorical(logits=data_pred[:, -1] / temp)\n",
+    "        dist = Categorical(logits=data_pred[:, -1] / temp) #Model outputs all tokens plus the one new token-> so last token is the new one\n",
     "        next_tokens = dist.sample().reshape(1, 1)\n",
     "         \n",
     "        # Append the sampled token to the list of generated tokens\n",
