--- a/transformer_decoder_training/jupyter_notebooks/piano_tests/sequence_prediction_piano_v5.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_tests/sequence_prediction_piano_v5.ipynb
@@ -3,14 +3,19 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Jetzt nochmal ein Decoder only ohne tokenization zu int mit hoffentlich korrekter inferenz\n",
+   "source": [
+    "# Jetzt nochmal ein Decoder only ohne tokenization zu int\n",
+    "\n",
+    "TODO:\n",
+    "train test split nochmal überarbeiten, da hier ja nur trainiert wird. Daten müssen extern getrennt werden, wenn woanders getestet wird -> Test soll auf dem Modell unbekannten Daten passieren\n"
+   ],
    "id": "24c38489ff10921a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:03.916262Z",
-     "start_time": "2024-06-25T22:10:03.308083Z"
+     "end_time": "2024-06-26T17:22:29.012638Z",
+     "start_time": "2024-06-26T17:22:28.274771Z"
     }
    },
    "cell_type": "code",
@@ -21,8 +26,6 @@
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "from torch import Tensor\n",
-    "\n",
-    "from data_preperation import dataset_snapshot\n",
     "\n",
     "import math\n",
     "import numpy as np\n",
@@ -44,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:03.923212Z",
-     "start_time": "2024-06-25T22:10:03.916912Z"
+     "end_time": "2024-06-26T17:22:29.049865Z",
+     "start_time": "2024-06-26T17:22:29.013378Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +63,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:04.018384Z",
-     "start_time": "2024-06-25T22:10:03.923726Z"
+     "end_time": "2024-06-26T17:22:29.213259Z",
+     "start_time": "2024-06-26T17:22:29.052270Z"
     }
    },
    "cell_type": "code",
@@ -81,12 +84,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:25.441947Z",
-     "start_time": "2024-06-25T22:10:04.019400Z"
+     "end_time": "2024-06-26T17:22:49.117904Z",
+     "start_time": "2024-06-26T17:22:29.215311Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from data_preperation import dataset_snapshot\n",
     "from transformer_decoder_training.dataprep_transformer import dataprep_1\n",
     "from sklearn.model_selection import train_test_split\n",
     "# prepare data for dataset\n",
@@ -111,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 71.47it/s]\n"
+      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.51it/s]\n"
      ]
     },
     {
@@ -128,8 +132,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:26.061779Z",
-     "start_time": "2024-06-25T22:10:25.442454Z"
+     "end_time": "2024-06-26T17:22:49.603104Z",
+     "start_time": "2024-06-26T17:22:49.118401Z"
     }
    },
    "cell_type": "code",
@@ -283,8 +287,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:26.063931Z",
-     "start_time": "2024-06-25T22:10:26.062388Z"
+     "end_time": "2024-06-26T17:22:49.605415Z",
+     "start_time": "2024-06-26T17:22:49.603721Z"
     }
    },
    "cell_type": "code",
@@ -313,8 +317,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:26.890291Z",
-     "start_time": "2024-06-25T22:10:26.064366Z"
+     "end_time": "2024-06-26T17:22:49.902600Z",
+     "start_time": "2024-06-26T17:22:49.605891Z"
     }
    },
    "cell_type": "code",
@@ -340,8 +344,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:26.892853Z",
-     "start_time": "2024-06-25T22:10:26.890759Z"
+     "end_time": "2024-06-26T17:22:49.905547Z",
+     "start_time": "2024-06-26T17:22:49.903137Z"
     }
    },
    "cell_type": "code",
@@ -374,8 +378,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:10:26.900743Z",
-     "start_time": "2024-06-25T22:10:26.893245Z"
+     "end_time": "2024-06-26T17:22:49.914138Z",
+     "start_time": "2024-06-26T17:22:49.905928Z"
     }
    },
    "cell_type": "code",
@@ -423,8 +427,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:14:19.098469Z",
-     "start_time": "2024-06-25T22:10:26.901831Z"
+     "end_time": "2024-06-26T17:26:40.561463Z",
+     "start_time": "2024-06-26T17:22:49.914846Z"
     }
    },
    "cell_type": "code",
@@ -445,16 +449,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Train loss: 0.076 Epoch time = 23.436s\n",
-      "Epoch: 2, Train loss: 0.049 Epoch time = 23.168s\n",
-      "Epoch: 3, Train loss: 0.049 Epoch time = 23.173s\n",
-      "Epoch: 4, Train loss: 0.049 Epoch time = 23.182s\n",
-      "Epoch: 5, Train loss: 0.048 Epoch time = 23.215s\n",
-      "Epoch: 6, Train loss: 0.048 Epoch time = 23.206s\n",
-      "Epoch: 7, Train loss: 0.048 Epoch time = 23.220s\n",
-      "Epoch: 8, Train loss: 0.047 Epoch time = 23.188s\n",
-      "Epoch: 9, Train loss: 0.046 Epoch time = 23.174s\n",
-      "Epoch: 10, Train loss: 0.045 Epoch time = 23.226s\n"
+      "Epoch: 1, Train loss: 0.074 Epoch time = 21.647s\n",
+      "Epoch: 2, Train loss: 0.049 Epoch time = 22.403s\n",
+      "Epoch: 3, Train loss: 0.049 Epoch time = 23.284s\n",
+      "Epoch: 4, Train loss: 0.049 Epoch time = 23.285s\n",
+      "Epoch: 5, Train loss: 0.049 Epoch time = 23.294s\n",
+      "Epoch: 6, Train loss: 0.048 Epoch time = 23.298s\n",
+      "Epoch: 7, Train loss: 0.048 Epoch time = 23.295s\n",
+      "Epoch: 8, Train loss: 0.046 Epoch time = 23.294s\n",
+      "Epoch: 9, Train loss: 0.046 Epoch time = 23.530s\n",
+      "Epoch: 10, Train loss: 0.045 Epoch time = 23.307s\n"
      ]
     }
    ],
@@ -463,19 +467,92 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-25T22:14:19.118168Z",
-     "start_time": "2024-06-25T22:14:19.099196Z"
+     "end_time": "2024-06-26T17:26:40.581075Z",
+     "start_time": "2024-06-26T17:26:40.562357Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# see: https://pytorch.org/tutorials/beginner/basics/saveloadrun_tutorial.html#saving-and-loading-models-with-shapes\n",
+    "# see: https://pytorch.org/tutorials/beginner/basics/saveloadrun_tutorial.html#save-and-load-the-model\n",
     "\n",
-    "torch.save(tf_generator, \"./saved_models/model_1_notebook_v5.pth\")"
+    "torch.save(tf_generator.state_dict(), \"./saved_models/model_1_notebook_v5.pth\")"
    ],
    "id": "364f0e3645599da",
    "outputs": [],
    "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Inference",
+   "id": "5c40661c3664a326"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T17:26:40.588895Z",
+     "start_time": "2024-06-26T17:26:40.581562Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "X, y = next(iter(test_loader))\n",
+    "\n",
+    "print(f\"melody: {X.shape}, Harmony: {y.shape}\")\n",
+    "\n",
+    "# get single sequence\n",
+    "X, y = X[1], y[1]\n",
+    "\n",
+    "\n",
+    "# Input should be of the shape: (batch_size, seq_length, feature dimension)\n",
+    "X, y = torch.unsqueeze(X, dim=0), torch.unsqueeze(y, dim=0)\n",
+    "print(f\"melody: {X.shape}, Harmony: {y.shape}\")"
+   ],
+   "id": "4a61b8e967d00d40",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "melody: torch.Size([64, 513, 88]), Harmony: torch.Size([64, 513, 88])\n",
+      "melody: torch.Size([1, 513, 88]), Harmony: torch.Size([1, 513, 88])\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T17:26:40.772418Z",
+     "start_time": "2024-06-26T17:26:40.589396Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformer_decoder_training.inference.inference_1 import inference\n",
+    "\n",
+    "output_tokens = inference(tf_generator, X, 512, 0.1, pad_token, device)"
+   ],
+   "id": "508e8d7bf482e310",
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[13], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtransformer_decoder_training\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01minference\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01minference_1\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m inference\n\u001B[0;32m----> 3\u001B[0m output_tokens \u001B[38;5;241m=\u001B[39m \u001B[43minference\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtf_generator\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m512\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpad_token\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Repos/minus1/transformer_decoder_training/inference/inference_1.py:10\u001B[0m, in \u001B[0;36minference\u001B[0;34m(model, sequence, num_of_tokens_to_generate, threshold, pad_token, device)\u001B[0m\n\u001B[1;32m      7\u001B[0m sequence\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# model prediction for new token\u001B[39;00m\n\u001B[0;32m---> 10\u001B[0m data_pred \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[43m(\u001B[49m\u001B[43msequence\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpad_token\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m data_pred\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m>\u001B[39m (sequence\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mModel might have generated more than one token\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "File \u001B[0;32m~/Repos/minus1/venv/lib64/python3.12/site-packages/torch/nn/modules/module.py:1532\u001B[0m, in \u001B[0;36mModule._wrapped_call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1530\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_compiled_call_impl(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)  \u001B[38;5;66;03m# type: ignore[misc]\u001B[39;00m\n\u001B[1;32m   1531\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m-> 1532\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_call_impl\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Repos/minus1/venv/lib64/python3.12/site-packages/torch/nn/modules/module.py:1541\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1536\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[1;32m   1537\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[1;32m   1538\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks\n\u001B[1;32m   1539\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[1;32m   1540\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[0;32m-> 1541\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mforward_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1543\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m   1544\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n",
+      "File \u001B[0;32m~/Repos/minus1/transformer_decoder_training/models/transformer_decoder_1.py:105\u001B[0m, in \u001B[0;36mTransformer.forward\u001B[0;34m(self, input_seq, pad_token)\u001B[0m\n\u001B[1;32m    100\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, input_seq, pad_token):\n\u001B[1;32m    101\u001B[0m     \u001B[38;5;66;03m# Mask for padding tokens\u001B[39;00m\n\u001B[1;32m    102\u001B[0m     \u001B[38;5;66;03m# input_key_mask = input_seq == 0\u001B[39;00m\n\u001B[1;32m    103\u001B[0m     \u001B[38;5;66;03m# input key mask should be (batch_size, seq_Length)\u001B[39;00m\n\u001B[1;32m    104\u001B[0m     \u001B[38;5;66;03m# .all(dim=-1) to compare the token in every dimension\u001B[39;00m\n\u001B[0;32m--> 105\u001B[0m     input_key_mask \u001B[38;5;241m=\u001B[39m (\u001B[43minput_seq\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m==\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mpad_token\u001B[49m)\u001B[38;5;241m.\u001B[39mall(dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;66;03m# i think i need to set padding token here for mask\u001B[39;00m\n\u001B[1;32m    106\u001B[0m     \u001B[38;5;66;03m#print(input_key_mask.shape)\u001B[39;00m\n\u001B[1;32m    107\u001B[0m \n\u001B[1;32m    108\u001B[0m     \u001B[38;5;66;03m# Embedding input sequence\u001B[39;00m\n\u001B[1;32m    109\u001B[0m     input_embs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39membedding(input_seq)\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!"
+     ]
+    }
+   ],
+   "execution_count": 13
   }
  ],
  "metadata": {
