Try sequence prediction with single sequence

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_piano_v5.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_piano_v5.ipynb
@@ -398,7 +398,7 @@
     "        expected_harmony = expected_harmony[:, 1:]\n",
     "        \n",
     "        # Generate predictions\n",
-    "        pred = tf_generator(input_melody, pad_token)\n",
+    "        pred = model(input_melody, pad_token)\n",
     "        \n",
     "        #print(\"Prediction shape:\", pred.shape)\n",
     "        #print(pred)\n",
