Add own eval notebook. iteration prob. not working

--- a/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/piano_training/sequence_prediction_v6.ipynb
@@ -19,8 +19,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:39:29.083327Z",
-     "start_time": "2024-07-03T18:39:28.496348Z"
+     "end_time": "2024-07-03T19:37:35.219262Z",
+     "start_time": "2024-07-03T19:37:34.049911Z"
     }
    },
    "cell_type": "code",
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:39:29.103732Z",
-     "start_time": "2024-07-03T18:39:29.084162Z"
+     "end_time": "2024-07-03T19:37:35.251153Z",
+     "start_time": "2024-07-03T19:37:35.219980Z"
     }
    },
    "cell_type": "code",
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:21.097670Z",
-     "start_time": "2024-07-03T18:39:29.104220Z"
+     "end_time": "2024-07-03T19:38:28.230156Z",
+     "start_time": "2024-07-03T19:37:35.252020Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 71.43it/s]\n"
+      "Processed dataset (1038/1038): 100%|██████████| 1038/1038 [00:14<00:00, 72.19it/s]\n"
      ]
     },
     {
@@ -107,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:21.103393Z",
-     "start_time": "2024-07-03T18:40:21.099679Z"
+     "end_time": "2024-07-03T19:38:28.234993Z",
+     "start_time": "2024-07-03T19:38:28.231240Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:21.411556Z",
-     "start_time": "2024-07-03T18:40:21.103754Z"
+     "end_time": "2024-07-03T19:38:28.571687Z",
+     "start_time": "2024-07-03T19:38:28.235398Z"
     }
    },
    "cell_type": "code",
@@ -176,8 +176,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:22.117815Z",
-     "start_time": "2024-07-03T18:40:21.412174Z"
+     "end_time": "2024-07-03T19:38:29.278925Z",
+     "start_time": "2024-07-03T19:38:28.573490Z"
     }
    },
    "cell_type": "code",
@@ -225,9 +225,9 @@
      "output_type": "stream",
      "text": [
       "Check length of datasets. should roughly match split ratio\n",
-      "train dataset: 14141\n",
-      "val dataset: 2723\n",
-      "test dataset: 2992\n",
+      "train dataset: 13799\n",
+      "val dataset: 2848\n",
+      "test dataset: 3209\n",
       "\n",
       "Visualize shape of batch:\n",
       "shape of one batch: torch.Size([64, 513, 24])\n",
@@ -238,8 +238,8 @@
       "=============\n",
       "Test print one snapshot:\n",
       "First half of values should be left hand, second half should be right hand\n",
-      "tensor([0., 0., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0., 1., 0., 0., 1., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0.])\n"
+      "tensor([0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 1., 0., 0., 0., 1.])\n"
      ]
     }
    ],
@@ -254,8 +254,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:22.120873Z",
-     "start_time": "2024-07-03T18:40:22.118793Z"
+     "end_time": "2024-07-03T19:38:29.281482Z",
+     "start_time": "2024-07-03T19:38:29.279440Z"
     }
    },
    "cell_type": "code",
@@ -279,8 +279,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:22.629151Z",
-     "start_time": "2024-07-03T18:40:22.121252Z"
+     "end_time": "2024-07-03T19:38:29.890601Z",
+     "start_time": "2024-07-03T19:38:29.282320Z"
     }
    },
    "cell_type": "code",
@@ -304,8 +304,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:40:22.632096Z",
-     "start_time": "2024-07-03T18:40:22.629662Z"
+     "end_time": "2024-07-03T19:38:29.893471Z",
+     "start_time": "2024-07-03T19:38:29.891018Z"
     }
    },
    "cell_type": "code",
@@ -338,8 +338,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:43:08.458555Z",
-     "start_time": "2024-07-03T18:43:08.438996Z"
+     "end_time": "2024-07-03T19:38:29.901589Z",
+     "start_time": "2024-07-03T19:38:29.894195Z"
     }
    },
    "cell_type": "code",
@@ -404,13 +404,13 @@
    ],
    "id": "57b52fad83974ad2",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:51:08.914733Z",
-     "start_time": "2024-07-03T18:43:12.902680Z"
+     "end_time": "2024-07-03T19:50:11.208829Z",
+     "start_time": "2024-07-03T19:38:29.902024Z"
     }
    },
    "cell_type": "code",
@@ -431,26 +431,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Train loss: 0.126, Val loss: 0.133, Epoch time = 44.974s\n",
-      "Epoch: 2, Train loss: 0.124, Val loss: 0.132, Epoch time = 44.998s\n",
-      "Epoch: 3, Train loss: 0.123, Val loss: 0.130, Epoch time = 44.866s\n",
-      "Epoch: 4, Train loss: 0.121, Val loss: 0.129, Epoch time = 44.857s\n",
-      "Epoch: 5, Train loss: 0.120, Val loss: 0.127, Epoch time = 44.856s\n",
-      "Epoch: 6, Train loss: 0.118, Val loss: 0.126, Epoch time = 44.866s\n",
-      "Epoch: 7, Train loss: 0.118, Val loss: 0.125, Epoch time = 44.853s\n",
-      "Epoch: 8, Train loss: 0.117, Val loss: 0.125, Epoch time = 44.867s\n",
-      "Epoch: 9, Train loss: 0.116, Val loss: 0.124, Epoch time = 44.860s\n",
-      "Epoch: 10, Train loss: 0.115, Val loss: 0.123, Epoch time = 44.859s\n"
+      "Epoch: 1, Train loss: 0.180, Val loss: 0.129, Epoch time = 44.243s\n",
+      "Epoch: 2, Train loss: 0.126, Val loss: 0.126, Epoch time = 43.879s\n",
+      "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 43.895s\n",
+      "Epoch: 4, Train loss: 0.120, Val loss: 0.121, Epoch time = 43.887s\n",
+      "Epoch: 5, Train loss: 0.118, Val loss: 0.119, Epoch time = 44.041s\n",
+      "Epoch: 6, Train loss: 0.117, Val loss: 0.118, Epoch time = 43.881s\n",
+      "Epoch: 7, Train loss: 0.115, Val loss: 0.116, Epoch time = 43.871s\n",
+      "Epoch: 8, Train loss: 0.114, Val loss: 0.115, Epoch time = 43.873s\n",
+      "Epoch: 9, Train loss: 0.112, Val loss: 0.113, Epoch time = 43.864s\n",
+      "Epoch: 10, Train loss: 0.111, Val loss: 0.112, Epoch time = 43.849s\n",
+      "Epoch: 11, Train loss: 0.110, Val loss: 0.111, Epoch time = 43.848s\n",
+      "Epoch: 12, Train loss: 0.108, Val loss: 0.109, Epoch time = 43.855s\n",
+      "Epoch: 13, Train loss: 0.107, Val loss: 0.109, Epoch time = 43.855s\n",
+      "Epoch: 14, Train loss: 0.106, Val loss: 0.108, Epoch time = 43.860s\n",
+      "Epoch: 15, Train loss: 0.105, Val loss: 0.107, Epoch time = 43.850s\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
     "### Last training output:\n",
+    "Learning rate: 1e-4\n",
     "\n",
     "Epoch: 1, Train loss: 0.126, Val loss: 0.133, Epoch time = 44.974s  \n",
     "Epoch: 2, Train loss: 0.124, Val loss: 0.132, Epoch time = 44.998s  \n",
@@ -461,15 +467,34 @@
     "Epoch: 7, Train loss: 0.118, Val loss: 0.125, Epoch time = 44.853s  \n",
     "Epoch: 8, Train loss: 0.117, Val loss: 0.125, Epoch time = 44.867s  \n",
     "Epoch: 9, Train loss: 0.116, Val loss: 0.124, Epoch time = 44.860s  \n",
-    "Epoch: 10, Train loss: 0.115, Val loss: 0.123, Epoch time = 44.859s "
+    "Epoch: 10, Train loss: 0.115, Val loss: 0.123, Epoch time = 44.859s \n",
+    "\n",
+    "learning rate: 1e-3\n",
+    "\n",
+    "Epoch: 1, Train loss: 0.180, Val loss: 0.129, Epoch time = 44.243s  \n",
+    "Epoch: 2, Train loss: 0.126, Val loss: 0.126, Epoch time = 43.879s  \n",
+    "Epoch: 3, Train loss: 0.123, Val loss: 0.122, Epoch time = 43.895s  \n",
+    "Epoch: 4, Train loss: 0.120, Val loss: 0.121, Epoch time = 43.887s  \n",
+    "Epoch: 5, Train loss: 0.118, Val loss: 0.119, Epoch time = 44.041s  \n",
+    "Epoch: 6, Train loss: 0.117, Val loss: 0.118, Epoch time = 43.881s  \n",
+    "Epoch: 7, Train loss: 0.115, Val loss: 0.116, Epoch time = 43.871s  \n",
+    "Epoch: 8, Train loss: 0.114, Val loss: 0.115, Epoch time = 43.873s  \n",
+    "Epoch: 9, Train loss: 0.112, Val loss: 0.113, Epoch time = 43.864s  \n",
+    "Epoch: 10, Train loss: 0.111, Val loss: 0.112, Epoch time = 43.849s     \n",
+    "Epoch: 11, Train loss: 0.110, Val loss: 0.111, Epoch time = 43.848s     \n",
+    "Epoch: 12, Train loss: 0.108, Val loss: 0.109, Epoch time = 43.855s     \n",
+    "Epoch: 13, Train loss: 0.107, Val loss: 0.109, Epoch time = 43.855s     \n",
+    "Epoch: 14, Train loss: 0.106, Val loss: 0.108, Epoch time = 43.860s     \n",
+    "Epoch: 15, Train loss: 0.105, Val loss: 0.107, Epoch time = 43.850s     \n",
+    "\n"
    ],
    "id": "b7ec398714dd8912"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-03T18:55:19.042602Z",
-     "start_time": "2024-07-03T18:55:18.977177Z"
+     "end_time": "2024-07-03T19:50:11.232708Z",
+     "start_time": "2024-07-03T19:50:11.209435Z"
     }
    },
    "cell_type": "code",
@@ -480,7 +505,7 @@
    ],
    "id": "25be820f644f6aa0",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -489,10 +514,13 @@
    "id": "afc1ca1cbff3be56"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-03T20:20:21.663324Z",
+     "start_time": "2024-07-03T20:20:21.648590Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from transformer_decoder_training.inference.inference_2 import inference\n",
     "\n",
@@ -513,7 +541,30 @@
     "    \n",
     "    "
    ],
-   "id": "a77852c333e34a93"
+   "id": "a77852c333e34a93",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 513, 24])\n",
+      "Next token shape: torch.Size([1, 24])\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[17], line 14\u001B[0m\n\u001B[1;32m     11\u001B[0m context_seq \u001B[38;5;241m=\u001B[39m sequence[: ,:\u001B[38;5;241m200\u001B[39m]\n\u001B[1;32m     12\u001B[0m continuing_seq \u001B[38;5;241m=\u001B[39m sequence[:, \u001B[38;5;241m200\u001B[39m:]\n\u001B[0;32m---> 14\u001B[0m output_tokens, melody_output_tokens \u001B[38;5;241m=\u001B[39m \u001B[43minference\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcontext_seq\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcontinuing_seq\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0.25\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpad_token\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Repos/minus1/transformer_decoder_training/inference/inference_2.py:38\u001B[0m, in \u001B[0;36minference\u001B[0;34m(model, context_sequence, true_continuing_sequence, threshold, pad_token, device)\u001B[0m\n\u001B[1;32m     36\u001B[0m \u001B[38;5;66;03m# Get the ground truth right hand:\u001B[39;00m\n\u001B[1;32m     37\u001B[0m ground_truth \u001B[38;5;241m=\u001B[39m true_continuing_sequence[\u001B[38;5;241m0\u001B[39m][i]\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m---> 38\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m ground_truth\u001B[38;5;241m.\u001B[39mshape \u001B[38;5;241m==\u001B[39m next_token\u001B[38;5;241m.\u001B[39mshape  \u001B[38;5;66;03m# Ensure same dimensions\u001B[39;00m\n\u001B[1;32m     40\u001B[0m \u001B[38;5;66;03m# Get right hand truth\u001B[39;00m\n\u001B[1;32m     41\u001B[0m right_hand_truth \u001B[38;5;241m=\u001B[39m ground_truth[:, midpoint:]\n",
+      "\u001B[0;31mAssertionError\u001B[0m: "
+     ]
+    }
+   ],
+   "execution_count": 17
   }
  ],
  "metadata": {
